# QElectroTech_Element_Updater

./: .clang-format  .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
cmake/: git_last_commit_sha.cmake  git_update_submodules.cmake
docs/: CMakeLists.txt
i18n/: CMakeLists.txt  QElectroTech_Element_Updater_nl_BE.ts
include/: mainwindow.h
include/element/: convertelement.h  element.h  loadelement.h  safeelement.h  virtualelement.h
include/gui/: mainwindow.h
src/: CMakeLists.txt  mainwindow.cpp
src/element/: CMakeLists.txt  convertelement.cpp  loadelement.cpp  safeelement.cpp  virtualelement.cpp
src/gui/: CMakeLists.txt  mainwindow.cpp
tests/: CMakeLists.txt
tests/catch/: CMakeLists.txt  loadelement_test.cpp
tests/googlemock/: CMakeLists.txt  tst_My_test.cpp
tests/googletest/: CMakeLists.txt  tst_My_test.cpp
tests/qttest/: CMakeLists.txt
